--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "yarn workspace example dev",
     "build": "yarn workspace example build",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "lint": "eslint gatsby-theme-auth0-minimal example"
+    "lint": "eslint gatsby-theme-auth0-minimal example",
+    "serve": "yarn workspace example serve"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
