this commit adds new env variable; changes returning useAuth values from array to object

--- a/example/.env.example
+++ b/example/.env.example
@@ -6,3 +6,4 @@ GATSBY_AUTH0_CALLBACK=<value>
 GATSBY_AUTH0_RESPONSE_TYPE=<value>
 GATSBY_AUTH0_AUDIENCE=<value>
 GATSBY_AUTH0_SCOPE=<value>
+GATSBY_AUTH0_CALLBACK_PATH=<value>
