--- a/example/.env.example
+++ b/example/.env.example
@@ -1,9 +1,10 @@
+# full explanation at https://github.com/pixel-point/gatsby-theme-auth0-minimal#setting-up-environment-variables
 # required
-GATSBY_AUTH0_DOMAIN=<value>
-GATSBY_AUTH0_CLIENTID=<value>
-GATSBY_AUTH0_CALLBACK=<value>
+GATSBY_AUTH0_DOMAIN=<value> # e.g. your-auth-app.auth0.com
+GATSBY_AUTH0_CLIENTID=<value> # set of symbols 
+GATSBY_AUTH0_CALLBACK=<value> # e.g https://localhost:9000/auth/callback
 # optional
 GATSBY_AUTH0_RESPONSE_TYPE=<value>
-GATSBY_AUTH0_AUDIENCE=<value>
-GATSBY_AUTH0_SCOPE=<value>
-GATSBY_AUTH0_CALLBACK_PATH=<value>
+GATSBY_AUTH0_AUDIENCE=<value> # unique identifier of the API you want to access
+GATSBY_AUTH0_SCOPE=<value> # OIDC standard scopes like 'profiel' or 'email'
+GATSBY_AUTH0_CALLBACK_PATH=<value> # e.g. '/callback'
