--- a/example/package.json
+++ b/example/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "example",
   "version": "1.0.0",
   "main": "index.js",
@@ -7,7 +8,8 @@
   "scripts": {
     "dev": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "clean": "gatsby clean"
   },
   "dependencies": {
     "gatsby": "^2.19.7",
