--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0",
-    "eslint-config-prettier": "^6.9.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-config-react-app": "^4.0.0",
     "eslint-plugin-react": "^7.18.3",
     "husky": "^3.0.5",
@@ -29,6 +29,7 @@
     }
   },
   "dependencies": {
-    "eslint-config-airbnb": "^18.0.1"
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-prettier": "^3.1.2"
   }
 }
